added materials to website

--- a/T2WML-K-CAP2019/index.html
+++ b/T2WML-K-CAP2019/index.html
@@ -89,33 +89,33 @@ Tabular Data with Wikidata </span><br>
     <div class="w3-row-padding">
       <h2 style="padding-top:5%; padding-bottom:2%">Structure</h2>
       <ul>
-        <li>Introduction to Wikidata (30 minutes)</li>
+        <li>Introduction to Wikidata (<a href="materials/1-IntroductiontoWikidata.pptx">Slides</a>) (<a href="materials/1-IntroductiontoWikidata.pdf">pdf</a>)</li>
             <ul>
                 <li>Goals of the Wikidata project</li>
                 <li>The Wikidata data model</li>
                 <li>Comparison with DBpedia, YAGO and Cyc</li>
                 <li>Interesting statistcs about Wikidata</li>
             </ul>
-        <li>Getting Data From Wikidata (45 minutes)</li>
+        <li>Getting Data From Wikidata (<a href="materials/2.1-GettingDatafromWikidataAPIandCLI.pptx">Slides (part 1)</a>) (<a href="materials/2.1-GettingDatafromWikidataAPIandCLI.pdf">pdf (part 1)</a>)),(<a href="materials/2.2-GettingDatafromWikidata.pptx">Slides (part 2)</a>) (<a href="materials/2.2-GettingDatafromWikidata.pdf">pdf (part 2)</a>))</li>
             <ul>
                 <li>API and command-line tools</li>
                 <li>Wikidata SPARQL enpoint</li>
                 <li>Linking data to Wikidata items</li>
             </ul>
-        <li>Extending Wikidata (45 minutes)</li>
+        <li>Extending Wikidata ((<a href="materials/3.1-ExtendingWikidataEntityLinking.pptx">Slides (part 1)</a>) (<a href="materials/3.1-ExtendingWikidataEntityLinking.pdf">pdf (part 1)</a>) ((<a href="materials/3.2-ExtendingWikidataT2WML.pptx">Slides (part 2)</a>) (<a href="materials/3.2-ExtendingWikidataT2WML.pdf">pdf (part 2)</a>)</li>
             <ul>
                 <li>Crowdsourcing, human curation</li>
                 <li>Bots for importing data from databases and for quality assurance</li>
                 <li>Tools to map structured data to Wikidata</li>
                 <li>Wikidata satellites to hold specialized data</li>
             </ul>
-        <li>Applications (30 minutes)</li>
+        <li>Applications (<a href="materials/4-Applications.pptx">Slides</a>) (<a href="materials/4-Applications.pdf">pdf</a>)</li>
             <ul>
                 <li>Visualization: SQID, Reasonator, etc.</li>
                 <li>Wikipedia infoboxes</li>
                 <li>Data enrichment via multi-lingual labels, external identifiers, analytics</li>
             </ul>
-        <li>Discussion and Hands On (30 minutes)</li>
+        <li>Discussion and Hands On</li>
             <ul>
                 <li>SPARQL and visualization</li>
                 <li>Wikifier</li>
