--- a/T2WML-K-CAP2019/index.html
+++ b/T2WML-K-CAP2019/index.html
@@ -33,8 +33,7 @@ body, html {
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
       <a href="#audience" class="w3-bar-item w3-button">AUDIENCE</a>
-      <a href="#structure" class="w3-bar-item w3-button"></i> STRUCTURE</a>
-      <a href="#resources" class="w3-bar-item w3-button"></i> RESOURCES</a>
+      <a href="#structure" class="w3-bar-item w3-button"></i> STRUCTURE AND RESOURCES</a>
       <a href="#tutors" class="w3-bar-item w3-button"></i> TUTORS</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -50,8 +49,7 @@ body, html {
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
   <a href="#audience" onclick="w3_close()" class="w3-bar-item w3-button">AUDIENCE</a>
-  <a href="#structure" onclick="w3_close()" class="w3-bar-item w3-button">STRUCTURE</a>
-  <a href="#resources" onclick="w3_close()" class="w3-bar-item w3-button">RESOURCES</a>
+  <a href="#structure" onclick="w3_close()" class="w3-bar-item w3-button">STRUCTURE AND RESOURCES</a>
   <a href="#tutors" onclick="w3_close()" class="w3-bar-item w3-button">TUTORS</a>
 </nav>
 
@@ -87,7 +85,7 @@ Tabular Data with Wikidata </span><br>
 
 <div class="w3-container " id="structure">
     <div class="w3-row-padding">
-      <h2 style="padding-top:5%; padding-bottom:2%">Structure</h2>
+      <h2 style="padding-top:5%; padding-bottom:2%">Structure and Resources</h2>
       <ul>
         <li>Introduction to Wikidata (<a href="materials/1-IntroductiontoWikidata.pptx">Slides</a>) (<a href="materials/1-IntroductiontoWikidata.pdf">pdf</a>)</li>
             <ul>
@@ -123,13 +121,6 @@ Tabular Data with Wikidata </span><br>
       </ul>
 ​
     
-    </div>
-</div>
-
-<div class="w3-container " id="resources">
-    <div class="w3-row-padding">
-      <h2 style="padding-top:5%; padding-bottom:2%">Resources</h2>
-        To be announced when the dates come closer!
     </div>
 </div>
 
